# ssh_telegram_manager

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  ssh_telegram_manager.epj
doc/: Doxyfile
etc/init.d/: ssh_telegram_manager
etc/ssh_telegram_manager/: ssh_telegram_manager.default
etc/systemd/debian/: ssh_telegram_manager.service
init.d/: ssh_telegram_manager
locale/: es.po  ssh_telegram_manager.pot
ssh_telegram_manager/: __init__.py  core.py  poethepoet.py
ssh_telegram_manager/locale/: es.po  ssh_telegram_manager.pot
ssh_telegram_manager/locale/es/LC_MESSAGES/: ssh_telegram_manager.mo
