[tool.poetry]
name = "ssh-telegram-manager"
version = "1.0.0"
description = "Python app to launch sshd server from Telegram"
authors = ["turulomio <turulomio@yahoo.es>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
python-telegram-bot = ">=21.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.2"
poethepoet = ">=0.27.0"
coverage = ">=7.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ssh_telegram_manager='ssh_telegram_manager.core:main'

[tool.poe.tasks]
release = { script = "ssh_telegram_manager.poethepoet:release" }
translate = { script = "ssh_telegram_manager.poethepoet:translate" }
pytest = { script = "ssh_telegram_manager.poethepoet:pytest" }
coverage = { script = "ssh_telegram_manager.poethepoet:coverage" }

[project.urls]
homepage = "https://github.com/turulomio/ssh_telegram_manager/"
repository = "https://github.com/turulomio/ssh_telegram_manager/"
changelog = "https://github.com/turulomio/ssh_telegram_manager#changelog"
